# C-Homeworks

hw1/: CMakeLists.txt  main.cpp
hw2/: CMakeLists.txt  main.cpp
hw3/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  data.txt  main.cpp
hw4/: main.cpp
hw5/: CMakeLists.txt  main.cpp
hw6/: CMakeLists.txt  main.cpp
hw7/: CMakeLists.txt  MyList.cpp  MyList.h  Node.cpp  Node.h  main.cpp
hw7/data/: confirmed_cases.txt
